creusot/tests/should_fail/prusti/match/homes.stderr
error[creusot]: function was supposed to return data with home/lifetime `'x` but it is returning data with home/lifetime `{'x|'y}`
 --> homes.rs:6:5
  |
6 | /     match x {
7 | |         Some(x) => x,
8 | |         None => default
9 | |     }
  | |_____^

error: aborting due to previous error

